--- a/src/Components/style/Profile.module.css
+++ b/src/Components/style/Profile.module.css
@@ -1,3 +1,16 @@
-.profileBlock{
-    
+/* .block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; 
+    gap: 20px;
 }
+
+.form {
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+}
+ */
