--- a/src/Components/style/Profile.module.css
+++ b/src/Components/style/Profile.module.css
@@ -1,16 +1,41 @@
-/* .block {
+.container{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end; 
+    gap: 20px;
+    padding: 20px;
+}
+.header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header h1{
+    font-size: 24px;
+    font-weight: 600;
+}
+.header button{
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.profile{
+    width: 30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     gap: 20px;
 }
-
-.form {
-    display: flex;
-    flex-direction: row;
-    align-self: flex-start;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100%;
+.profile img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
- */
+.profile h2{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
